agregue item detail container

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
     height: 200px;
     object-fit: cover;
 }
+.contenedor-detail img {
+    height: 300px;
+    object-fit: cover;
+}
 
 hr {
     color: #FFF !important;
